--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
-</head>
-<body>
-    <div>
-        <form method="post">
-            {% csrf_token %}
-            {{form.as_p}}
-            <button type="submit">Register</button>
-        </form>
-    </div>
-</body>
-</html>
+{% extends 'base.html' %}
+
+
+{% block page-title %}
+    <h4>Sign Up</h4>
+{% endblock page-title %}
+
+
+{% block main-content %}
+<div>
+    <form method="post">
+        {% csrf_token %}
+        {{form.as_p}}
+        <button type="submit">Register</button>
+    </form>
+</div>
+{% endblock main-content %}
+    
