--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>
+        
+        {% block title %}
+            
+        {% endblock title %}
+            
+    </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
@@ -16,7 +22,7 @@
                         <li><a href="{% url 'home' %}"><h4>Home</h4></a></li>
                         <li><a href=""><h4>Explore</h4></a></li>
                         {% if request.user.is_authenticated %}
-                        <li><a href=""><h4>Profile</h4></a></li>
+                        <li><a href="{% url 'profile' request.user.id  %}"><h4>Profile</h4></a></li>
                         {% endif %}
                     </ul>
                 </div>
@@ -33,12 +39,16 @@
                         
                 </div>
             </div>
-            <div class="col-sm-3">
-                <h4>Right</h4>
+            <div class="col-sm-3 text-end">
                 
-                {% if not request.user.is_authenticated %}
-                    <a href="{% url 'signup' %}">Signup </a> or <a href="{% url 'login' %}">Login</a>
-                {% endif %}
+                <ul class="list-inline">
+                    {% if not request.user.is_authenticated %}
+                        <li class="list-inline-item"><a href="{% url 'signup' %}">Signup</a> or <a href="{% url 'login' %}">Login</a></li> 
+                    {% else %}
+                    <li class="list-inline-item"><a href="{% url 'logout' %}">Logout</a></li>
+                    {% endif %}
+                </ul>
+                
                     
             </div>
         </div>
