--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 
 {% block page-title %}
@@ -10,8 +11,8 @@
 <div>
     <form method="post">
         {% csrf_token %}
-        {{form.as_p}}
-        <button type="submit">Register</button>
+        {{form|crispy}}
+        <button type="submit" class="btn btn-primary">Register</button>
     </form>
 </div>
 {% endblock main-content %}
