--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,7 @@
                     {% if not request.user.is_authenticated %}
                         <li class="list-inline-item"><a href="{% url 'signup' %}">Signup</a> or <a href="{% url 'login' %}">Login</a></li> 
                     {% else %}
+                    <li class="list-inline-item">Hello {{request.user|title}}</li>
                     <li class="list-inline-item"><a href="{% url 'logout' %}">Logout</a></li>
                     {% endif %}
                 </ul>
